classDiagram
direction LR
%% Sơ đồ lớp miền nghiệp vụ theo mã nguồn hiện tại.
%% Dấu + biểu diễn thuộc tính/phương thức công khai; NULL xem tài liệu.
class AbstractUser {
    <<abstract>>
    +String username
    +String password
    +String email
    +String first_name
    +String last_name
    +Boolean is_active
    +Boolean is_staff
    +Boolean is_superuser
    +DateTime last_login
    +DateTime date_joined
}
AbstractUser <|-- User
class User {
    +BigInt id
    +String role
    +__str__()
}
class DriverProfile {
    +BigInt id
    +BigInt user_id
    +String full_name
    +Date date_of_birth
    +String phone
    +Text address
    +String approval_status
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class DriverLicense {
    +BigInt id
    +BigInt driver_id
    +String license_number
    +String license_class
    +Date issued_date
    +Date expiry_date
    +URL front_image_url
    +String front_image_public_id
    +URL back_image_url
    +String back_image_public_id
    +String status
    +DateTime created_at
    +DateTime updated_at
    +__str__()
    +is_expired()
    +is_valid()
    +effective_status()
    +get_effective_status_display()
}
class FaceProfile {
    +BigInt id
    +BigInt driver_id
    +URL face_image_url
    +String cloudinary_public_id
    +JSON embedding
    +String approval_status
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class VehicleType {
    +BigInt id
    +String name
    +String category
    +Text description
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class Vehicle {
    +BigInt id
    +BigInt vehicle_type_id
    +String license_plate
    +String brand
    +String model
    +Integer manufacture_year
    +Decimal load_capacity
    +Integer passenger_capacity
    +String status
    +Text description
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class Device {
    +BigInt id
    +BigInt vehicle_id
    +String device_code
    +String name
    +String status
    +DateTime last_seen_at
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class DriverVehicleAssignment {
    +BigInt id
    +BigInt driver_id
    +BigInt vehicle_id
    +DateTime start_at
    +DateTime end_at
    +DateTime created_at
    +DateTime updated_at
    +save()
    +__str__()
}
class DrivingSession {
    +BigInt id
    +BigInt assignment_id
    +BigInt vehicle_id
    +DateTime started_at
    +DateTime ended_at
    +String status
    +DateTime created_at
    +DateTime updated_at
    +clean()
    +save()
    +__str__()
}
class ViolationType {
    +BigInt id
    +String code
    +String name
    +Text description
    +DateTime created_at
    +DateTime updated_at
    +normalize_code()
    +save()
    +__str__()
}
class Violation {
    +BigInt id
    +BigInt session_id
    +BigInt violation_type_id
    +String severity
    +DateTime detected_at
    +String status
    +Text admin_note
    +DateTime created_at
    +DateTime updated_at
    +__str__()
}
class Evidence {
    +BigInt id
    +BigInt violation_id
    +String type
    +URL url
    +String cloudinary_public_id
    +DateTime captured_at
    +safe_url()
    +__str__()
}
class Appeal {
    +BigInt id
    +BigInt violation_id
    +Text content
    +String status
    +Text admin_response
    +DateTime created_at
    +DateTime updated_at
    +DateTime resolved_at
    +DateTime deleted_at
    +__str__()
    +delete()
}
class ViolationReview {
    +BigInt id
    +BigInt violation_id
    +BigInt reviewer_id
    +String reviewer_name
    +String action
    +JSON before
    +JSON after
    +DateTime created_at
    +__str__()
}
User "1" -- "0..1" DriverProfile : user
DriverProfile "1" -- "0..1" DriverLicense : driver
DriverProfile "1" -- "0..1" FaceProfile : driver
VehicleType "1" -- "0..*" Vehicle : vehicle_type
Vehicle "1" -- "0..1" Device : vehicle
DriverProfile "1" -- "0..*" DriverVehicleAssignment : driver
Vehicle "1" -- "0..*" DriverVehicleAssignment : vehicle
DriverVehicleAssignment "1" -- "0..*" DrivingSession : assignment
Vehicle "1" -- "0..*" DrivingSession : vehicle
DrivingSession "1" -- "0..*" Violation : session
ViolationType "1" -- "0..*" Violation : violation_type
Violation "1" -- "0..*" Evidence : violation
Violation "1" -- "0..1" Appeal : violation
Violation "1" -- "0..*" ViolationReview : violation
User "1" -- "0..*" ViolationReview : reviewer
